# KanjiSRS

./: .gitignore  Cargo.toml  README.md  info
src/: browser.rs  japanese.rs  main.rs  sm2.rs  utils.rs
src/cli/: add.rs  all.rs  fix_db.rs  info.rs  mod.rs  remove.rs  reset.rs  review.rs  run.rs  stats.rs
src/storage/: item.rs  mod.rs  srs.rs
