[package]
name = "kanji_srs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.135", features = ["derive"]}
open = "*"
clap = "3.0.12"
chrono = "0.4.19"
term-table = "1.3.2"
